Implement dragging to full page when apps grid gap is enabled

Changes:
1. During the dragging to full page, allow inserting placeholder and
   push the last item to next page via
   PagedViewStructure::ClearOverflow().
2. At the end of dragging, add a "page break" item behind the new last
   item and clear the "page break" item behind the old last item in
   local model and server.

Bug: 880977
Test: AppsGridGapTest.MoveItemToPreviousFullPage

Change-Id: I318d46bb6917846e05f5552b040e45d8fe036319
Reviewed-on: https://chromium-review.googlesource.com/1220946
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591366}
Former-commit-id: 2f53253f8891ba2537d70a9b41054391c82ce0a5