chrome/browser/ui/app_list/test/fake_app_list_model_updater.h
@@ -65,6 +65,7 @@ class FakeAppListModelUpdater : public AppListModelUpdater {
   void OnItemUpdated(ash::mojom::AppListItemMetadataPtr item) override {}
   void OnPageBreakItemAdded(const std::string& id,
                             const syncer::StringOrdinal& position) override {}
+  void OnPageBreakItemDeleted(const std::string& id) override {}
 
   void SetDelegate(AppListModelUpdaterDelegate* delegate) override;
 
